clients/java-client/gen/tarwyn/ffi/tarwyn_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_unsubscribe(struct Handle *handle, uint64_t id)
     * }
     */
    public static MethodHandle xt_unsubscribe$handle() {
        return xt_unsubscribe.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_unsubscribe(struct Handle *handle, uint64_t id)
     * }
     */
    public static MemorySegment xt_unsubscribe$address() {
        return xt_unsubscribe.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_unsubscribe(struct Handle *handle, uint64_t id)
     * }
     */
    public static int xt_unsubscribe(MemorySegment handle, long id) {
        var mh$ = xt_unsubscribe.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_unsubscribe", handle, id);
            }
            return (int)mh$.invokeExact(handle, id);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_ring_base {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_ring_base");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void *xt_ring_base(const struct Handle *handle, uint64_t id)
     * }
     */
    public static FunctionDescriptor xt_ring_base$descriptor() {
        return xt_ring_base.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void *xt_ring_base(const struct Handle *handle, uint64_t id)
     * }
     */
    public static MethodHandle xt_ring_base$handle() {
        return xt_ring_base.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void *xt_ring_base(const struct Handle *handle, uint64_t id)
     * }
     */
    public static MemorySegment xt_ring_base$address() {
        return xt_ring_base.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void *xt_ring_base(const struct Handle *handle, uint64_t id)
     * }
     */
    public static MemorySegment xt_ring_base(MemorySegment handle, long id) {
        var mh$ = xt_ring_base.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_ring_base", handle, id);
            }
            return (MemorySegment)mh$.invokeExact(handle, id);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_ring_write_index {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_ring_write_index");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_ring_write_index(const struct Handle *handle, uint64_t id, uint64_t *out)
     * }
     */
    public static FunctionDescriptor xt_ring_write_index$descriptor() {
        return xt_ring_write_index.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_ring_write_index(const struct Handle *handle, uint64_t id, uint64_t *out)
     * }
     */
    public static MethodHandle xt_ring_write_index$handle() {
        return xt_ring_write_index.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_ring_write_index(const struct Handle *handle, uint64_t id, uint64_t *out)
     * }
     */
    public static MemorySegment xt_ring_write_index$address() {
        return xt_ring_write_index.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_ring_write_index(const struct Handle *handle, uint64_t id, uint64_t *out)
     * }
     */
    public static int xt_ring_write_index(MemorySegment handle, long id, MemorySegment out) {
        var mh$ = xt_ring_write_index.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_ring_write_index", handle, id, out);
            }
            return (int)mh$.invokeExact(handle, id, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static FunctionDescriptor xt_put_string$descriptor() {
        return xt_put_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static MethodHandle xt_put_string$handle() {
        return xt_put_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static MemorySegment xt_put_string$address() {
        return xt_put_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static int xt_put_string(MemorySegment handle, MemorySegment channel, MemorySegment value) {
        var mh$ = xt_put_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_string", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_integer {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_integer");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_integer(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static FunctionDescriptor xt_put_integer$descriptor() {
        return xt_put_integer.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_integer(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static MethodHandle xt_put_integer$handle() {
        return xt_put_integer.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_integer(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static MemorySegment xt_put_integer$address() {
        return xt_put_integer.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_integer(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static int xt_put_integer(MemorySegment handle, MemorySegment channel, int value) {
        var mh$ = xt_put_integer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_integer", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_long {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_long");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_long(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static FunctionDescriptor xt_put_long$descriptor() {
        return xt_put_long.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_long(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static MethodHandle xt_put_long$handle() {
        return xt_put_long.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_long(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static MemorySegment xt_put_long$address() {
        return xt_put_long.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_long(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static int xt_put_long(MemorySegment handle, MemorySegment channel, long value) {
        var mh$ = xt_put_long.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_long", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_double {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_DOUBLE
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_double");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_double(const struct Handle *handle, const char *channel, double value)
     * }
     */
    public static FunctionDescriptor xt_put_double$descriptor() {
        return xt_put_double.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_double(const struct Handle *handle, const char *channel, double value)
     * }
     */
    public static MethodHandle xt_put_double$handle() {
        return xt_put_double.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_double(const struct Handle *handle, const char *channel, double value)
     * }
     */
    public static MemorySegment xt_put_double$address() {
        return xt_put_double.ADDR;
    }
